--- a/src/Busybee/HomeBundle/Resources/views/Scripts/formTabSubmitScript.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Scripts/formTabSubmitScript.html.twig
@@ -2,15 +2,7 @@
     $('form').submit(function () {
         var fragment = $('.tab-content > .active').attr('id');
 
-        {% if app.request.get('currentSearch') is defined and app.request.get('limit') is defined %}
-        var path = "{{ path(route, {'id': app.request.get('id'), 'currentSearch': app.request.get('currentSearch'), 'limit': app.request.get('limit'), '_fragment': '__fragment__'}) }}";
-        {% elseif app.request.get('limit') is defined %}
-        var path = "{{ path(route, {'id': app.request.get('id'), 'limit': limit, '_fragment': '__fragment__'}) }}";
-        {% elseif app.request.get('currentSearch') is defined %}
-        var path = "{{ path(route, {'id': app.request.get('id'), 'currentSearch': app.request.get('currentSearch'), '_fragment': '__fragment__'}) }}";
-        {% else %}
         var path = "{{ path(route, {'id': app.request.get('id'), '_fragment': '__fragment__'}) }}";
-        {% endif %}
 
         path = path.replace('__fragment__', fragment);
 
@@ -25,7 +17,7 @@
 
     $(document).ready(function () {
         var hash = '#' + window.location.hash.substr(1);
-        if (hash != "#") {
+        if (hash !== "#") {
             if ($(hash).length > 0) {
                 var key = '#formTabs > .' + hash.replace('#', '');
                 var index = $(key).parent();
