--- a/src/Busybee/StudentBundle/Resources/views/Activity/list.html.twig
+++ b/src/Busybee/StudentBundle/Resources/views/Activity/list.html.twig
@@ -10,10 +10,10 @@
 
 
 {% block contentContainer %}
-    {% include 'PaginationBundle:Default:index.html.twig' with {'form_array': {'action': path('student_activities', {'currentSearch': pagination.search|replace({'%': ''})}) } } %}
+    {% include 'PaginationBundle:Default:index.html.twig' with {'form_array': {'action': path('student_activities') } } %}
     {% set transDomain = 'BusybeeStudentBundle' %}
 
-    {% set h3Content = addButton({'windowOpen': {'route': path('student_activity_edit', {'id': 'Add', 'currentSearch': pagination.search|replace({'%': ''})})}})|raw %}
+    {% set h3Content = addButton({'windowOpen': {'route': path('student_activity_edit', {'id': 'Add'})}})|raw %}
 
     {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': 'activities.title'} %}
     <div class="container-fluid">
@@ -71,7 +71,7 @@
                     {{ activity.year }}
                 </div>
                 <div class="col-sm-2 col-sm-offset-1 form-inline">
-                    {{ editButton({'style': '', 'windowOpen': {'route': path('student_activity_edit', {'id': activity.id, 'currentSearch': pagination.search|replace({'%': ''})}) } })|raw }}
+                    {{ editButton({'style': '', 'windowOpen': {'route': path('student_activity_edit', {'id': activity.id}) } })|raw }}
                 </div>
             </div>
         {% endfor %}
