Pagination Changes added to other pages.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/calendarView.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/calendarView.html.twig
@@ -12,7 +12,7 @@
 				{% endfor %}
 			</select>
 		{% endif %}
-        {% if closeWindow %}
+        {% if closeWindow is defined %}
             {{ closeButton()|raw }}
         {% else %}
             {{ returnButton({'title': 'calendar.year.return', 'transDomain': 'BusybeeInstituteBundle', 'windowOpen': {'route': path('calendar_years')}})|raw }}
