End of Day 29th May 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/views/Default/headerNotice.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Default/headerNotice.html.twig
@@ -2,7 +2,7 @@
 {% set headerNotices = '' %}
 {% if app.user is not null %}
     {% if app.user.year is not null %}
-        {% set headerNotices = headerNotices ~ miscButton({'transDomain': 'BusybeeHomeBundle', 'style': 'float: left;', 'title': 'year.system.warning', 'class': 'btn btn-warning btn-header', 'prompt': ['year.system.year', {'%year%': get_SystemYear(app.user).name }], 'windowOpen': {'route': path('person_edit', {'id': app.user.person.id, '_fragment': 'user'})}}) %}
+        {% set headerNotices = headerNotices ~ miscButton({'transDomain': 'BusybeeHomeBundle', 'style': 'float: left;', 'title': 'year.system.warning', 'class': 'btn btn-warning btn-header', 'prompt': {'message': 'year.system.year', 'params': {'%year%': get_SystemYear(app.user).name }}, 'windowOpen': {'route': path('person_edit', {'id': app.user.person.id, '_fragment': 'user'})}}) %}
         {% set containerThemeOverwrite = ' containerWarning' %}
     {% else %}
         {% set headerNotices = headerNotices ~ miscButton({'transDomain': 'BusybeeHomeBundle', 'style': 'float: left;', 'title': 'year.system.current', 'class': 'btn btn-success btn-header', 'prompt': {'message': 'year.system.year', 'params': {'%year%': get_SystemYear(app.user).name }}, 'windowOpen': {'route': path('person_edit', {'id': app.user.person.id, '_fragment': 'user'})}}) %}
