--- a/src/Busybee/HomeBundle/Resources/views/Page/panelStart.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Page/panelStart.html.twig
@@ -14,6 +14,10 @@
     {% set name = 'Default' %}
 {% endif %}
 
+{% if panelParams is not defined %}
+    {% set panelParams = {} %}
+{% endif %}
+
 {% if name is not iterable %}
     {% set name = {'%name%': name} %}
 {% endif %}
@@ -32,7 +36,7 @@
             {{ h3Content|raw }}
         </h3>
         {% if panelParagraph is defined %}
-            <p>{{ panelParagraph|trans }}</p>
+            <p>{{ panelParagraph|trans(panelParams) }}</p>
         {% endif %}
     </div>
     <div class="panel-body">
