--- a/src/Busybee/TimeTableBundle/Resources/views/Periods/periodCollection.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Periods/periodCollection.html.twig
@@ -17,6 +17,9 @@
         {% set h3Content = h3Content ~ saveButton()|raw %}
         {% set h3Content = h3Content ~ '<span style="float: right;">&nbsp;</span>' %}
         {% set h3Content = h3Content ~ upDownButton()|raw %}
+        {% if form.vars.value is not empty %}
+            {% set h3Content = h3Content ~ miscButton({'class': 'btn btn-success halflings halflings-cog', 'transDomain': 'BusybeeTimeTableBundle', 'title': 'period.activities.add', 'windowOpen': {'route': path('period_plan', {'id': form.vars.value.id }), 'target': 'PeriodPlan', 'params': 'width=1200,height=900'}})|raw %}
+        {% endif %}
         {% set h3Content = h3Content ~ '</div>' %}
         {% set title = 'timetable.period.add.title'|trans %}
         <div class="PeriodIdentifier" period="{{ period_id }}" page="{{ form.parent.parent.vars.name }}"></div>
